package com.woocommerce.android.ui.dashboard.stats

object DashboardStatsTestTags {
    const val DASHBOARD_STATS_CARD = "dashboard_stats_card"
    const val DASHBOARD_TOP_PERFORMERS_CARD = "dashboard_top_performers_card"
    const val STATS_RANGE_DROPDOWN_BUTTON = "stats_range_dropdown_button"
    const val STATS_RANGE_DROPDOWN_MENU = "stats_range_dropdown_menu"
}
