...
@Preview
@Composable
fun WooShippingLabelsPackageCreationScreenPreview() {
    WooThemeWithBackground {
        WooShippingLabelsPackageCreationScreen(
            tabs = listOf(
                PageTab("Custom", CUSTOM),
                PageTab("Carrier", CARRIER),
                PageTab("Saved", SAVED)
            )
        )
    }
}
...
