package com.woocommerce.android.ui.analytics.hub

import com.woocommerce.android.ui.analytics.hub.daterangeselector.AnalyticsHubDateRangeSelectorViewState
import com.woocommerce.android.viewmodel.MultiLiveEvent
import java.util.Date

data class AnalyticsViewState(
    val refreshIndicator: RefreshIndicator,
    val analyticsDateRangeSelectorState: AnalyticsHubDateRangeSelectorViewState,
    val cards: AnalyticsHubCardViewState,
    val showFeedBackBanner: Boolean,
    val lastUpdateTimestamp: String
)

sealed class AnalyticsViewEvent : MultiLiveEvent.Event() {
    data class OpenDatePicker(val fromDate: Date, val toDate: Date) : MultiLiveEvent.Event()
    object OpenDateRangeSelector : AnalyticsViewEvent()
    object SendFeedback : AnalyticsViewEvent()
    object OpenSettings : AnalyticsViewEvent()
    data class OpenGoogleAdsCreation(
        val url: String,
        val isCreationFlow: Boolean,
        val title: String
    ) : AnalyticsViewEvent()
}

sealed class RefreshIndicator {
    object ShowIndicator : RefreshIndicator()
    object NotShowIndicator : RefreshIndicator()
}
