...
        }
    }
}

private val DashboardWidgetEditorViewModel.WidgetEditorState.widgetStateTestTag: String
    get() = widgetList.joinToString(
        prefix = "dashboard_widget_editor_state__",
        separator = "__",
        postfix = "__"
    ) { widget -> "${widget.type.trackingIdentifier}_${widget.editorStateTag}" }

private fun DashboardWidget.rowTestTag(index: Int) =
    "dashboard_widget_editor_row_${index}_${type.trackingIdentifier}_$editorStateTag"
...
